--- a/app/src/main/res/layout-v28/activity_main.xml
+++ b/app/src/main/res/layout-v28/activity_main.xml
@@ -17,7 +17,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.027"
-        app:srcCompat="@mipmap/logo"
+        app:srcCompat="@drawable/logo"
         tools:ignore="ContentDescription" />
 
     <TextView
