[CONFIG] configuraciones en cada clase

--- a/app/src/main/res/layout/activity_liquidacion_tiempo_completo.xml
+++ b/app/src/main/res/layout/activity_liquidacion_tiempo_completo.xml
@@ -134,7 +134,7 @@
         android:layout_height="40dp"
         android:backgroundTint="@color/white"
         android:onClick="abrirCalendario"
-        android:text="01/01/2024"
+        android:text=""
         android:textColor="#A8000000"
         app:cornerRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
