--- a/app/src/main/res/layout/activity_liquidacion_por_dias.xml
+++ b/app/src/main/res/layout/activity_liquidacion_por_dias.xml
@@ -78,7 +78,7 @@
         android:layout_height="48dp"
         android:backgroundTint="@color/white"
         android:onClick="abrirCalendario"
-        android:text="01/01/2024"
+        android:text=""
         android:textColor="#A8000000"
         app:cornerRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
