--- a/app/src/main/res/layout/activity_liquidacion_tiempo_completo.xml
+++ b/app/src/main/res/layout/activity_liquidacion_tiempo_completo.xml
@@ -134,7 +134,7 @@
         android:layout_height="40dp"
         android:backgroundTint="@color/white"
         android:onClick="abrirCalendario"
-        android:text=""
+        android:text="01/01/2024"
         android:textColor="#A8000000"
         app:cornerRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -216,18 +216,6 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.918" />
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="50dp"
-        android:layout_height="40dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.078"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.051"
-        app:srcCompat="@drawable/iconmenu" />
-
     <Spinner
         android:id="@+id/lista"
         android:layout_width="127dp"
@@ -238,6 +226,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.652" />
+
+    <ImageButton
+        android:id="@+id/imageButtonMenu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.044"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.026"
+        app:srcCompat="@drawable/iconmenu" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
