--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,6 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#68B26B</color>
     <color name="lavender">#FF000000</color>
+    <color name="gris">#AFACAC</color>
 
 </resources>
