--- a/app/src/main/res/layout/activity_planilla_nomina.xml
+++ b/app/src/main/res/layout/activity_planilla_nomina.xml
@@ -17,10 +17,10 @@
       android:text="INFORMACIÓN EMPRESA"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.455"
+      app:layout_constraintHorizontal_bias="0.523"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintVertical_bias="0.041" />
+      app:layout_constraintVertical_bias="0.043" />
 
   <TextView
       android:id="@+id/textView2"
@@ -29,10 +29,10 @@
       android:text="NIT EMPRESA"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.471"
+      app:layout_constraintHorizontal_bias="0.516"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintVertical_bias="0.127" />
+      app:layout_constraintVertical_bias="0.125" />
 
   <TextView
       android:id="@+id/textView3"
@@ -42,122 +42,182 @@
       android:text="Documento soporte de pago de nómina electronica"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.481"
+      app:layout_constraintHorizontal_bias="0.645"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintVertical_bias="0.209" />
+      app:layout_constraintVertical_bias="0.196" />
 
   <TextView
       android:id="@+id/textView4"
       android:layout_width="119dp"
-      android:layout_height="23dp"
+      android:layout_height="24dp"
       android:text="Periodo de pago:"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.637"
+      app:layout_constraintHorizontal_bias="0.601"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintVertical_bias="0.291" />
+      app:layout_constraintVertical_bias="0.283" />
 
   <androidx.constraintlayout.widget.ConstraintLayout
-      android:layout_width="325dp"
+      android:id="@+id/constraintLayout2"
+      android:layout_width="313dp"
       android:layout_height="86dp"
       app:layout_constraintBottom_toBottomOf="parent"
+      android:layout_marginTop="10dp"
       app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.083"
+      app:layout_constraintHorizontal_bias="0.079"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintVertical_bias="0.815">
+      app:layout_constraintVertical_bias="0.767">
 
     <TextView
-        android:id="@+id/textView14"
-        android:layout_width="168dp"
+        android:id="@+id/conceptoDeducc"
+        android:layout_width="165dp"
         android:layout_height="18dp"
         android:gravity="center"
         android:text="Concepto"
+        android:background="#F1EEEE"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.015"
+        app:layout_constraintHorizontal_bias="0.006"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.014" />
+
+    <TextView
+        android:id="@+id/cantidadDeducc"
+        android:layout_width="70dp"
+        android:layout_height="18dp"
+        android:gravity="center"
+        android:text="Cantidad "
+        android:background="#F1EEEE"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.677"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.014" />
+
+    <TextView
+        android:id="@+id/valorDeducc"
+        android:layout_width="78dp"
+        android:layout_height="18dp"
+        android:gravity="center"
+        android:text="Valor"
+        android:background="#F1EEEE"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.014" />
+  </androidx.constraintlayout.widget.ConstraintLayout>
+
+  <androidx.constraintlayout.widget.ConstraintLayout
+      android:id="@+id/constraintLayout"
+      android:layout_width="313dp"
+      android:layout_height="86dp"
+      android:layout_marginTop="10dp"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.934"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintVertical_bias="0.767">
+
+    <TextView
+        android:id="@+id/textView14"
+        android:layout_width="165dp"
+        android:layout_height="18dp"
+        android:gravity="center"
+        android:text="Concepto"
+        android:background="#F1EEEE"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.014" />
 
     <TextView
         android:id="@+id/textView15"
-        android:layout_width="72dp"
+        android:layout_width="70dp"
         android:layout_height="18dp"
+        android:text="Cantidad"
         android:gravity="center"
-        android:text="Cantidad "
-        tools:layout_editor_absoluteX="170dp"
-        tools:layout_editor_absoluteY="1dp" />
+        android:background="#F1EEEE"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.679"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.014" />
 
     <TextView
         android:id="@+id/textView16"
-        android:layout_width="82dp"
+        android:layout_width="78dp"
         android:layout_height="18dp"
         android:gravity="center"
         android:text="Valor"
-        tools:layout_editor_absoluteX="242dp"
-        tools:layout_editor_absoluteY="1dp" />
-  </androidx.constraintlayout.widget.ConstraintLayout>
-
-  <androidx.constraintlayout.widget.ConstraintLayout
-      android:id="@+id/constraintLayout"
-      android:layout_width="325dp"
-      android:layout_height="86dp"
-      app:layout_constraintBottom_toBottomOf="parent"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.916"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintVertical_bias="0.815">
+        android:background="#F1EEEE"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.014" />
 
   </androidx.constraintlayout.widget.ConstraintLayout>
 
   <TextView
       android:id="@+id/textView8"
       android:layout_width="175dp"
-      android:layout_height="21dp"
+      android:layout_height="24dp"
       android:text="FECHA "
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.938"
+      app:layout_constraintHorizontal_bias="0.901"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintVertical_bias="0.289" />
+      app:layout_constraintVertical_bias="0.28" />
 
   <TextView
       android:id="@+id/textView9"
-      android:layout_width="132dp"
-      android:layout_height="20dp"
+      android:layout_width="125dp"
+      android:layout_height="24dp"
       android:text="Nombre :"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.06"
+      app:layout_constraintHorizontal_bias="0.059"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintVertical_bias="0.408" />
+      app:layout_constraintVertical_bias="0.377" />
 
   <EditText
       android:id="@+id/editTextText"
       android:layout_width="388dp"
-      android:layout_height="22dp"
+      android:layout_height="24dp"
       android:ems="10"
       android:inputType="text"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.548"
+      app:layout_constraintHorizontal_bias="0.549"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintVertical_bias="0.388" />
+      app:layout_constraintVertical_bias="0.377" />
 
   <TextView
       android:id="@+id/textView10"
-      android:layout_width="128dp"
-      android:layout_height="19dp"
+      android:layout_width="125dp"
+      android:layout_height="24dp"
       android:text="Identificación :"
-      tools:layout_editor_absoluteX="36dp"
-      tools:layout_editor_absoluteY="196dp" />
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.059"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintVertical_bias="0.471" />
 
   <EditText
       android:id="@+id/editTextText2"
@@ -167,53 +227,149 @@
       android:inputType="text"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.332"
+      app:layout_constraintHorizontal_bias="0.313"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintVertical_bias="0.506" />
-
-  <TextView
-      android:id="@+id/textView11"
-      android:layout_width="82dp"
-      android:layout_height="26dp"
-      android:layout_marginTop="20dp"
-      android:text="Cargo:"
-      app:layout_constraintTop_toBottomOf="@+id/editTextText"
-      tools:layout_editor_absoluteX="382dp" />
+      app:layout_constraintVertical_bias="0.468" />
 
   <EditText
       android:id="@+id/editTextText3"
       android:layout_width="205dp"
-      android:layout_height="33dp"
+      android:layout_height="24dp"
       android:ems="10"
       android:inputType="text"
-      tools:layout_editor_absoluteX="492dp"
-      tools:layout_editor_absoluteY="194dp" />
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.895"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintVertical_bias="0.468" />
 
   <TextView
       android:id="@+id/textView12"
-      android:layout_width="325dp"
-      android:layout_height="25dp"
+      android:layout_width="313dp"
+      android:layout_height="24dp"
       android:gravity="center"
       android:text="INGRESOS"
-      tools:layout_editor_absoluteX="34dp"
-      tools:layout_editor_absoluteY="233dp" />
+      android:background="#DFDEDE"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.079"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintVertical_bias="0.573" />
 
   <TextView
       android:id="@+id/textView13"
-      android:layout_width="325dp"
-      android:layout_height="25dp"
+      android:layout_width="313dp"
+      android:layout_height="24dp"
       android:gravity="center"
       android:text="DEDUCCIONES"
-      tools:layout_editor_absoluteX="372dp"
-      tools:layout_editor_absoluteY="233dp" />
+      android:background="#DFDEDE"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.934"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintVertical_bias="0.57" />
 
   <ImageView
       android:id="@+id/imageView2"
       android:layout_width="141dp"
       android:layout_height="116dp"
-      app:srcCompat="@drawable/logo"
-      tools:layout_editor_absoluteX="0dp"
-      tools:layout_editor_absoluteY="-2dp" />
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.012"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintVertical_bias="0.036"
+      app:srcCompat="@drawable/logo" />
+
+  <TextView
+      android:id="@+id/textView7"
+      android:layout_width="70dp"
+      android:layout_height="24dp"
+      android:text="Cargo:"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.584"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintVertical_bias="0.468" />
+
+  <TextView
+      android:id="@+id/textView11"
+      android:layout_width="wrap_content"
+      android:layout_height="24dp"
+      android:text="Total ingresos"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.237"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintVertical_bias="0.898" />
+
+  <EditText
+      android:id="@+id/editTextText4"
+      android:layout_width="110dp"
+      android:layout_height="24dp"
+      android:ems="10"
+      android:inputType="text"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.404"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="@+id/textView"
+      app:layout_constraintVertical_bias="0.896" />
+
+  <TextView
+      android:id="@+id/textView17"
+      android:layout_width="wrap_content"
+      android:layout_height="24dp"
+      android:text="Total deducciones"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.753"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintVertical_bias="0.898" />
+
+  <EditText
+      android:id="@+id/editTextText5"
+      android:layout_width="110dp"
+      android:layout_height="24dp"
+      android:ems="10"
+      android:inputType="text"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.958"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintVertical_bias="0.895" />
+
+  <TextView
+      android:id="@+id/textView18"
+      android:layout_width="wrap_content"
+      android:layout_height="24dp"
+      android:text="NETO A PAGAR"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.647"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintVertical_bias="0.983" />
+
+  <EditText
+      android:id="@+id/editTextText6"
+      android:layout_width="169dp"
+      android:layout_height="24dp"
+      android:ems="10"
+      android:inputType="text"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.953"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintVertical_bias="0.986" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
